only dial test nodes and do not preload or pin things
A few improvements:

1. Do not connect to the bootstrap nodes, this will only create
  extra network traffic which may interfere with the test
2. Ensure both nodes are peers of each other before starting the
  test, otherwise you may be measuring discovery time
3. Do not pin or preload added blocks, both things take time and
  are not what you are testing here

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@nestjs/platform-express": "^6.8.3",
     "@nestjs/serve-static": "^2.0.0",
     "axios": "^0.19.2",
+    "delay": "^4.3.0",
     "document-register-element": "1.13.1",
     "execution-time": "^1.4.1",
     "ipfs": "^0.41.2",
     "it-all": "^1.0.1",
     "it-concat": "^1.0.0",
+    "it-last": "^1.0.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
