Use symbols instead of colors only

--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "delay": "^4.3.0",
     "document-register-element": "1.13.1",
     "execution-time": "^1.4.1",
+    "form-data": "^3.0.0",
+    "go-ipfs-dep": "^0.4.23",
     "ipfs": "^0.41.2",
+    "ipfs-http-client": "^42.0.0",
+    "ipfsd-ctl": "^3.0.0",
     "it-all": "^1.0.1",
     "it-concat": "^1.0.0",
     "it-last": "^1.0.1",
