--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/core": "^6.8.3",
     "@nestjs/platform-express": "^6.8.3",
     "@nestjs/serve-static": "^2.0.0",
+    "autocannon": "^4.6.0",
     "axios": "^0.19.2",
     "delay": "^4.3.0",
     "document-register-element": "1.13.1",
@@ -46,45 +47,47 @@
     "it-all": "^1.0.1",
     "it-concat": "^1.0.0",
     "it-last": "^1.0.1",
+    "mui-datatables": "^2.14.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "5.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "victory": "^34.1.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.0.4",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.18.2",
-    "@nrwl/jest": "9.0.4",
-    "jest": "24.9.0",
-    "@types/jest": "24.9.1",
-    "ts-jest": "24.0.0",
-    "cypress": "^3.8.2",
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.8.3",
     "@nrwl/cypress": "9.0.4",
-    "@nrwl/web": "9.0.4",
+    "@nrwl/eslint-plugin-nx": "9.0.4",
+    "@nrwl/jest": "9.0.4",
+    "@nrwl/nest": "9.0.4",
+    "@nrwl/node": "9.0.4",
     "@nrwl/react": "9.0.4",
+    "@nrwl/web": "9.0.4",
+    "@nrwl/workspace": "9.0.4",
+    "@testing-library/react": "9.4.0",
+    "@types/jest": "24.9.1",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@nrwl/eslint-plugin-nx": "9.0.4",
-    "@typescript-eslint/parser": "2.19.2",
+    "@types/react-router-dom": "5.1.3",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "cypress": "^3.8.2",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "@types/react-router-dom": "5.1.3",
-    "@nrwl/node": "9.0.4",
-    "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3",
-    "@nrwl/nest": "9.0.4"
+    "jest": "^25.1.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.7.4"
   }
 }
